--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "3.4.*",
+        "symfony/twig-bundle": "3.4.*",
         "symfony/web-server-bundle": "3.4.*",
         "symfony/yaml": "3.4.*"
     },
     "require-dev": {
-        "symfony/monolog-bundle": "^3.4"
+        "symfony/monolog-bundle": "^3.4",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
