--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,11 @@
         "symfony/yaml": "3.4.*"
     },
     "require-dev": {
-        "symfony/monolog-bundle": "^3.4",
-        "symfony/profiler-pack": "^1.0"
+        "easycorp/easy-log-handler": "^1.0.7",
+        "symfony/debug-bundle": "*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/profiler-pack": "*",
+        "symfony/var-dumper": "*"
     },
     "config": {
         "preferred-install": {
